client_react/src/App.css
:root {
  --navbar-height: 67px;
  --sidenav-width: 250px;
  --date-time-width: 70px;

  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

body
{
    overflow: hidden;
}

h5
{
    margin: 0;
}

.page-content
{
    position: fixed;
    top: calc( 0 + var(--navbar-height));
    left: 0;
    height: calc( 100vh - var(--navbar-height) + 11px );
    width: 100vw;
    display: flex;
}

.google-sign
{
    float: left; /* don't be alone at the top */
    padding: 0px 0px 0px;
}

.google-container
{
    /* display: flex; */
    align-items: center;
    float: left; /* Align with other nav items */
    height: calc(var(--navbar-height) - 11px);
    padding: 8px;
}

.logout-button
{
    height: 44px;
    float: right;
    padding: 0px 0px 0px;
}

.username
{
    font-size: 32px;
    padding: 0px 0px 0px;
}

.no-scroll 
{
    overflow:hidden; /* used for main body */
}

/* Login Popup */
div#login-popup
{
    /* This provides a opaque, black, background 
    that sits on top and prevents the clicking of 
    other elements. */
    visibility: visible;
    position: fixed;
    z-index: 9999;
    top: var(--navbar-height);
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.80)
}

div#login-popup > aside
{
    width:300px;
    height: 200px;
    border-radius: 7px;
    padding: 10px;

    /* Centers object to the middle of the screen */
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(255, 255, 255, 1);
}

